...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Location List Table View Controller-->
        <scene sceneID="krH-Wa-Lnh">
            <objects>
                <viewController id="fEq-Jy-FQu" customClass="LocationListTableViewController" customModule="Buszzz" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="eN5-R2-dek"/>
                        <viewControllerLayoutGuide type="bottom" id="kpr-b9-a4l"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="KB3-m0-DtK">
                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
...
                        <viewControllerLayoutGuide type="bottom" id="R80-fQ-4u2"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="M3w-87-HFm">
                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入搜索地址" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="OcD-tx-eQ8">
                                <rect key="frame" x="16" y="20" width="343" height="21"/>
                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <textInputTraits key="textInputTraits" returnKeyType="search"/>
                                <connections>
                                    <outlet property="delegate" destination="BUT-mu-5hE" id="7VV-dg-3Hp"/>
...
                                <color key="backgroundColor" red="0.99607843139999996" green="0.74901960779999999" blue="0.29803921570000003" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="240" id="Icj-kX-6dw"/>
                                    <constraint firstAttribute="height" constant="44" id="xcV-CL-i9c"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="确定">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="22"/>
                                    </userDefinedRuntimeAttribute>
...
